--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
             
                 <div id ="arrays">Arrays</div>
                 <article>
-                <class id="info">
+                <div id="info">
                     <img src="/Users/matthewflowers/Desktop/JavaScriptJan2019/javascriptLibrary/2-javaScript-Projects/2-Website/images/Array.jpg">
-                </class>
+                </div>
             </article>
                 <p>Arrays are variables with multiple values, state the variable and list values within the []</p>
                 <hr>
 
                 <div id="functions">Functions</div>
                 <article>
-                <class id = "ex1">
+                <div id = "ex1">
                     <img src="/Users/matthewflowers/Desktop/JavaScriptJan2019/javascriptLibrary/2-javaScript-Projects/2-Website/images/Array.jpg">
-                </class>
+                </div>
                 </article>
                 <p>Functions are prompts that fulfill a designated block of code</p>
                 <hr>
@@ -71,9 +71,9 @@
                     
                 <div id="ForLoops">For Loops</div>
                 <article>
-                <class id="ex2">
+                <div id="ex2">
                 <img src="/Users/matthewflowers/Desktop/JavaScriptJan2019/javascriptLibrary/2-javaScript-Projects/2-Website/images/Screen Shot 2019-01-13 at 10.34.43 PM.png">
-                </class>
+                </div>
             </article>
                 <p>
                 Loops can execute a block of code a number of times</p>
