image path changed

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div id ="arrays">Arrays</div>
                 <article>
                 <div id="info">
-                    <img src="/Users/matthewflowers/Desktop/JavaScriptJan2019/javascriptLibrary/2-javaScript-Projects/2-Website/images/Array.jpg">
+                    <img src="./images/Array.jpg">
                 </div>
             </article>
                 <p>Arrays are variables with multiple values, state the variable and list values within the []</p>
@@ -62,7 +62,7 @@
                 <div id="functions">Functions</div>
                 <article>
                 <div id = "ex1">
-                    <img src="/Users/matthewflowers/Desktop/JavaScriptJan2019/javascriptLibrary/2-javaScript-Projects/2-Website/images/Array.jpg">
+                    <img src="./images/Array.jpg">
                 </div>
                 </article>
                 <p>Functions are prompts that fulfill a designated block of code</p>
@@ -72,7 +72,7 @@
                 <div id="ForLoops">For Loops</div>
                 <article>
                 <div id="ex2">
-                <img src="/Users/matthewflowers/Desktop/JavaScriptJan2019/javascriptLibrary/2-javaScript-Projects/2-Website/images/Screen Shot 2019-01-13 at 10.34.43 PM.png">
+                <img src="./images/Screen Shot 2019-01-13 at 10.34.43 PM.png">
                 </div>
             </article>
                 <p>
